# ta-backend

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
migration/: env.py
migration/versions/: a9e1956cba63_add_additional_fields_to_course.py  aa1c5ce7d483_make_teacher_required.py  c53f55e9231e_init.py  c76513259483_add_notes_and_hidden.py  eddd4abafc33_add_admin_field_for_user.py
ta_backend/: app.py  models.py  plugins.py  responses.py
ta_backend/helper/: database.py  discord.py  settings.py
ta_backend/routes/: auth.py  course.py
ta_backend/sso/: __init__.py  additional-info.json  client.py  types.py
tests/: test_ta_backend.py
