[tool.poetry]
name = "ta-backend"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ormar = "^0.10.19"
fastapi = {extras = ["all"], version = "^0.68.1"}
fastapi-login = "^1.7.2"
python-dotenv = "^0.19.0"
aiosqlite = "^0.17.0"
httpx = "^0.19.0"
xmltodict = "^0.12.0"
pytz = "^2021.1"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
fastapi-limiter = {git = "https://github.com/long2ice/fastapi-limiter.git"}
sentry-sdk = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "21.7b0"
mypy = "^0.910"
alembic = "^1.7.3"
types-pytz = "^2021.1.2"
types-ujson = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
